RESOLVED FIXED281551
Crash under ValidationBubble::showRelativeTo() when the view doesn't have a window
https://bugs.webkit.org/show_bug.cgi?id=281551
Summary Crash under ValidationBubble::showRelativeTo() when the view doesn't have a w...
Chris Dumez
Reported 2024-10-15 19:53:20 PDT
Crash under ValidationBubble::showRelativeTo() when the view doesn't have a window: ``` [WebValidationPopover showRelativeToRect:ofView:preferredEdge:]: view has no window. You must supply a view in a window.' ```
Attachments
Chris Dumez
Comment 1 2024-10-15 19:53:30 PDT
Chris Dumez
Comment 2 2024-10-15 19:58:00 PDT
EWS
Comment 3 2024-10-16 07:46:10 PDT
Committed 285264@main (c78fd3d92bca): <https://commits.webkit.org/285264@main> Reviewed commits have been landed. Closing PR #35259 and removing active labels.
EWS
Comment 4 2024-10-16 13:27:22 PDT
Committed 283286.294@safari-7620-branch (ebd4bfe3b15c): <https://commits.webkit.org/283286.294@safari-7620-branch> Reviewed commits have been landed. Closing PR #2050 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.