Crash under ValidationBubble::showRelativeTo() when the view doesn't have a window https://bugs.webkit.org/show_bug.cgi?id=281551 rdar://137514579

Reviewed by Wenson Hsieh.

Passing a view that isn't part of a window to `[NSPopover showRelativeTo:]` crashes.
However, this can happen if the user quickly switches to another tab as form validation
is happening. We now early return if the view no longer has a window when
ValidationBubble::showRelativeTo() gets called.

* Source/WebCore/platform/mac/ValidationBubbleMac.mm:
(WebCore::ValidationBubble::showRelativeTo):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/FormValidation.mm:
(TEST(FormValidation, PresentingFormValidationUIWithoutViewControllerDoesNotCrash)):
(TEST(FormValidation, FormValidationOnUnparentedWindowDoesNotCrash)):
* Tools/TestWebKitAPI/cocoa/TestWKWebView.h:
* Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:
(-[TestWKWebView removeFromTestWindow]):

Canonical link: https://commits.webkit.org/285264@main